# PicTag

./: CMakeLists.txt  PicTag.cpp  PicTag.h  README.md  gui.cpp  gui.h  metadata.cpp  metadata.h  tageditor.cpp
include/: metadata.h
src/: gui.cpp  main.cpp  metadata.cpp
